# LLM-COUNCIL

./: CLAUDE.md  pyproject.toml
backend/: config.py  council.py  docx_exporter.py  file_parser.py  main.py  openrouter.py
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage2.css  Stage3.css
